# vybe-template

./: .gitignore  LICENSE  README.md  generate-claude.py
.template/: .gitkeep
examples/: README.md
examples/weather-ai-app/: .env.example  CLAUDE.md  DEMO_INSTRUCTIONS.md  README.md  demo.py  pyproject.toml
examples/weather-ai-app/app/: main.py
examples/weather-ai-app/app/api/: endpoint.py  router.py
examples/weather-ai-app/app/schemas/: weather_schema.py
examples/weather-ai-app/app/services/: ai_service.py  weather_service.py
